# NextStep_Chat

./: .gitignore  CMakeLists.txt  README.md
client/include/: chatwindow.h  loginwindow.h  network.h
client/src/: chatwindow.cpp  loginwindow.cpp  network.cpp
server/: CMakeLists.txt
server/include/: auth.h  chat.h  database.h  server.h  session.h
server/src/: main.cpp  server.cpp  session.cpp
shared/: .protocol.hpp.swp  models.hpp  protocal.hpp  protocol.hpp
